<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintBottom_toTopOf="@id/button_vibrate_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="249dp" />

    <Button
        android:id="@+id/button_vibrate_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_a"
        app:layout_constraintBottom_toTopOf="@+id/button_vibrate_c"
        app:layout_constraintEnd_toStartOf="@+id/button_vibrate_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/button_vibrate_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_b"
        app:layout_constraintBottom_toTopOf="@id/button_vibrate_d"
        app:layout_constraintStart_toEndOf="@id/button_vibrate_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/button_vibrate_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_c"
        app:layout_constraintBottom_toTopOf="@id/button_vibrate_default"
        app:layout_constraintEnd_toStartOf="@+id/button_vibrate_d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vibrate_a" />

    <Button
        android:id="@+id/button_vibrate_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_d"
        app:layout_constraintBottom_toTopOf="@id/button_vibrate_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_vibrate_c"
        app:layout_constraintTop_toBottomOf="@+id/button_vibrate_b" />

    <Button
        android:id="@+id/button_vibrate_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vibrate_c" />
</androidx.constraintlayout.widget.ConstraintLayout>